--- a/store-client/package.json
+++ b/store-client/package.json
@@ -15,6 +15,9 @@
     "@react-navigation/stack": "^6.3.12",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "lottie-ios": "^3.4.0",
+    "lottie-loader-react-native": "^1.0.3",
+    "lottie-react-native": "^5.1.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "^4.4.1"
